# pyttings

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml  tests.yml
pyttings/: __init__.py  core.py  exceptions.py  type_converter.py
tests/: conftest.py  settings.py  test_core.py  test_type_converter.py  utils.py
