[project]
name = "pyttings"
version = "0.1.0"
description = "Python settings management with namespacing and modular files. Inspired by Django."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.4",
]
