[project]
name = "pyttings"
version = "1.1.0"
description = "Python settings management with namespacing and modular files. Inspired by Django."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.4",
]
